--- a/prow/config.yaml
+++ b/prow/config.yaml
@@ -62,6 +62,6 @@ presubmits:
         - name: GOVERSION
           value: "1.10"
         - name: ARCH
-          value: "linux/amd64,darwin/amd64,freebsd/amd64,netbsd/armv7"
+          value: "linux/amd64"
 
 ## linux/amd64,linux/386,darwin/amd64,darwin/386,windows/amd64,windows/386,freebsd/amd64,freebsd/386,openbsd/amd64,openbsd/386,netbsd/amd64,netbsd/386,dragonfly/amd64,linux/armv5,linux/armv6,linux/armv7,linux/arm64,freebsd/armv6,freebsd/armv7,openbsd/armv7,netbsd/armv6,netbsd/armv7,linux/ppc64,linux/ppc64le,linux/mips64,linux/mips64le
