--- a/prow/cluster/deck_deployment.yaml
+++ b/prow/cluster/deck_deployment.yaml
@@ -33,7 +33,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: deck
-        image: gcr.io/k8s-prow/deck:v20180521-f8caf9625
+        image: docker.io/sipian/deck:v20180521-f8caf9625
         imagePullPolicy: Always
         ports:
           - name: http
