--- a/prow/cluster/plank_deployment.yaml
+++ b/prow/cluster/plank_deployment.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
       - name: plank
-        image: gcr.io/k8s-prow/plank:v20180521-f8caf9625
+        image: docker.io/sipian/plank:v20180521-f8caf9625
         args:
         - --tot-url=http://tot
         - --build-cluster=/etc/cluster/cluster
