--- a/prow/cluster/sinker_deployment.yaml
+++ b/prow/cluster/sinker_deployment.yaml
@@ -15,7 +15,7 @@ spec:
       - name: sinker
         args:
         - --build-cluster=/etc/cluster/cluster
-        image: gcr.io/k8s-prow/sinker:v20180521-f8caf9625
+        image: docker.io/sipian/sinker:v20180521-f8caf9625
         volumeMounts:
         - mountPath: /etc/cluster
           name: cluster
