--- a/prow/cluster/splice_deployment.yaml
+++ b/prow/cluster/splice_deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: splice
-        image: gcr.io/k8s-prow/splice:v20180521-f8caf9625
+        image: docker.io/sipian/splice:v20180521-f8caf9625
         volumeMounts:
         - name: config
           mountPath: /etc/config
