--- a/prow/cmd/hook/Dockerfile
+++ b/prow/cmd/hook/Dockerfile
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM gcr.io/k8s-prow/git:0.1
+FROM docker.io/sipian/git:0.1
 LABEL maintainer="spxtr@google.com"
 
 COPY hook /hook
