--- a/prow/cmd/splice/Dockerfile
+++ b/prow/cmd/splice/Dockerfile
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM docker.io/sipian/git:0.1
+FROM gcr.io/k8s-prow/git:0.1
 LABEL maintainer="rmmh@google.com"
 
 COPY splice /splice
