--- a/prow/cluster/hook_deployment.yaml
+++ b/prow/cluster/hook_deployment.yaml
@@ -33,7 +33,7 @@ spec:
       terminationGracePeriodSeconds: 180
       containers:
       - name: hook
-        image: gcr.io/prometheus-test-204522/hook:v20180528-stat-5-g8540804
+        image: gcr.io/prometheus-test-204522/hook:v20180521-f8caf9625
         imagePullPolicy: Always
         args:
         - --dry-run=false
