--- a/prow/cluster/starter.yaml
+++ b/prow/cluster/starter.yaml
@@ -96,7 +96,7 @@ spec:
       terminationGracePeriodSeconds: 180
       containers:
       - name: hook
-        image: gcr.io/k8s-prow/hook:v20180529-e9431eaa3
+        image: gcr.io/prometheus-test-204522/hook:v20180604-stat-197-g54aeedc
         imagePullPolicy: Always
         args:
         - --dry-run=false
