--- a/prow/cluster/hook_deployment.yaml
+++ b/prow/cluster/hook_deployment.yaml
@@ -33,7 +33,7 @@ spec:
       terminationGracePeriodSeconds: 180
       containers:
       - name: hook
-        image: gcr.io/prometheus-test-204522/hook:v20180605-stat-201-gbedbd16
+        image: gcr.io/prometheus-test-204522/hook:v20180605-stat-202-g8136511
         imagePullPolicy: Always
         args:
         - --dry-run=false
@@ -55,6 +55,9 @@ spec:
         - name: config
           mountPath: /etc/config
           readOnly: true
+        - name: serviceaccount
+          mountPath: /etc/serviceaccount
+          readOnly: true
         - name: plugins
           mountPath: /etc/plugins
           readOnly: true
@@ -71,6 +74,9 @@ spec:
       - name: oauth
         secret:
           secretName: oauth-token
+      - name: serviceaccount
+        secret:
+          secretName: service-account          
       - name: config
         configMap:
           name: config
