--- a/prow/cmd/hook/Dockerfile
+++ b/prow/cmd/hook/Dockerfile
@@ -14,6 +14,7 @@
 
 FROM gcr.io/k8s-prow/git:0.1
 LABEL maintainer="spxtr@google.com"
+RUN 'apt-get install htop'
 
 COPY hook /hook
 ENTRYPOINT ["/hook"]
