--- a/prow/cmd/hook/Dockerfile
+++ b/prow/cmd/hook/Dockerfile
@@ -17,6 +17,20 @@ FROM docker:stable
 
 RUN apk add --no-cache ca-certificates && update-ca-certificates
 RUN apk add --no-cache git openssh make
+ENV GOLANG_VERSION 1.10
+ENV GOLANG_DOWNLOAD_URL https://golang.org/dl/go$GOLANG_VERSION.linux-amd64.tar.gz
+ENV GOLANG_DOWNLOAD_SHA256 b5a64335f1490277b585832d1f6c7f8c6c11206cba5cd3f771dcb87b98ad1a33
+
+RUN wget "$GOLANG_DOWNLOAD_URL" -O golang.tar.gz \
+	&& echo "$GOLANG_DOWNLOAD_SHA256  golang.tar.gz" | sha256sum -c - \
+	&& tar -C /usr/local -xzf golang.tar.gz \
+	&& rm golang.tar.gz
+
+ENV GOPATH /go
+ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
+ENV GOSOURCE $GOPATH/src/github.com
+
+RUN mkdir -p "$GOPATH/src/github.com" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
 
 COPY hook /hook
 ENTRYPOINT ["/hook"]
