--- a/prow/plugins/benchmark/BUILD.bazel
+++ b/prow/plugins/benchmark/BUILD.bazel
@@ -26,13 +26,17 @@ go_library(
     srcs = ["benchmark.go"],
     importpath = "k8s.io/test-infra/prow/plugins/benchmark",
     deps = [
+        "//prow/config:go_default_library",    
         "//prow/git:go_default_library",
         "//prow/github:go_default_library",
+        "//prow/kube:go_default_library",    
+        "//prow/pjutil:go_default_library",
         "//prow/pluginhelp:go_default_library",
         "//prow/plugins:go_default_library",
         "//prow/repoowners:go_default_library",
         "//vendor/github.com/sirupsen/logrus:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
+        "//vendor/k8s.io/api/core/v1:go_default_library",
     ],
 )
 
@@ -48,3 +52,7 @@ filegroup(
     srcs = [":package-srcs"],
     tags = ["automanaged"],
 )
+
+
+
+    
