update pod_util command

--- a/prow/config-prometheus.yaml
+++ b/prow/config-prometheus.yaml
@@ -40,7 +40,7 @@ presubmits:
       containers:
       - image: sipian/golang-builder:prow
         command:
-        - "./prow/builder.sh"
+        - "./prow/benchmark_build.sh"
         imagePullPolicy: Always
         env:
         - name: GOVERSION
