--- a/prow/config-prometheus.yaml
+++ b/prow/config-prometheus.yaml
@@ -31,7 +31,7 @@ presubmits:
   sipian/prometheus:
   - name: start-benchmark
     context: start-benchmark
-    always_run: true
+    always_run: false
     skip_report: true
     agent: kubernetes
     decorate: true
@@ -42,11 +42,6 @@ presubmits:
         command:
         - "./prow/benchmark_build.sh"
         imagePullPolicy: Always
-        env:
-        - name: GOVERSION
-          value: "1.10"
-        - name: TEST
-          value: "true"
         volumeMounts:
         - name: serviceaccount
           mountPath: /etc/serviceaccount
